# sch-core

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  README  README.md  SCD.pc.cmake  SCD.sln  _config.yml  appveyor.yml  conanfile.py  index.html
CD/: CD.vcproj  CD_Pair.cpp  CD_Pair.h  CD_Scene.cpp  CD_Scene.h  CD_Simplex.cpp  CD_Simplex.h  CD_Simplex.hxx  CD_SimplexEnhanced.cpp  CD_SimplexEnhanced.h  CD_SimplexEnhanced.hxx  GJK.h
CD_Penetration/: CD_Depth.cpp  CD_Depth.h  CD_Penetration.vcproj  DT_TriEdge.cpp  DT_TriEdge.h
CMakeModules/: FindBoost.cmake  FindGLUT_fix1.cmake
File_Parsing/: File_Parsing.vcproj  File_Parsing_.vcproj  SimplestParsing.cpp  SimplestParsing.h
Matrix/: Matrix.rar  MatrixAbstractLayerBoost.h  MatrixAbstractLayerVNL.h  QuaternionM.h  SCD_Types.h  SmallMatrix3x3Mod.h  SmallVector3Mod.h  SmallVector4Default.h  SmallVector4Mod.cpp
S_Polyhedron/: CMakeLists.txt  S_Polyhedron.cpp  S_Polyhedron.h  S_PolyhedronVertex.cpp  S_PolyhedronVertex.h  S_PolyhedronVertex.hxx  S_Polyhedron_.vcproj
Trunk/: CMakeLists.txt  INSTALL  SCD.pc.cmake  SCD_.sln  install.bat
Trunk/CD/: CD.vcproj  CD_.vcproj  CD_Pair.cpp  CD_Pair.h  CD_Scene.cpp  CD_Scene.h  CD_Simplex.cpp  CD_Simplex.h  CD_Simplex.hxx  CD_SimplexEnhanced.h  CD_SimplexEnhanced.hxx  CMakeLists.txt
Trunk/CD_Penetration/: CD_Depth.cpp  CD_Depth.h  CD_Penetration.vcproj  CD_Penetration_.vcproj  CMakeLists.txt  DT_TriEdge.h
Trunk/File_Parsing/: CMakeLists.txt  File_Parsing.vcproj  File_Parsing_.vcproj  SimplestParsing.h
Trunk/Includes/: CD_Pair.h  STP_BV.h  STP_BV_P.h  S_Box.h  S_Object.h  S_ObjectNonNormalized.h  S_ObjectNormalized.h  S_Polyhedron.h  S_Sphere.h  S_Superellipsoid.h
Trunk/Matrix/: CMakeLists.txt  Matrix.vcproj  MatrixAbstractLayerBoost.h  Matrix_.vcproj  QuaternionM.h  SCD_Types.h  SmallMatrix3x3Mod.h  SmallMatrix4x4Default.h  SmallVector3Default.h  SmallVector3Mod.h
Trunk/Matrix/Release/: BuildLog.htm
Trunk/STP-BV/: CMakeLists.txt  STP-BV.vcproj  STP-BV_.vcproj  STP_BV.cpp  STP_BV.h  STP_BV_P.cpp  STP_BV_P.h  STP_BigSphere.cpp  STP_BigSphere.h  STP_Feature.cpp  STP_Feature.h  STP_SmallSphere.cpp  STP_SmallSphere.h  STP_Torus.cpp  STP_Torus.h
Trunk/S_Object/: CMakeLists.txt  S_Box.cpp  S_Box.h  S_Object.cpp  S_Object.h  S_Object.hxx  S_Object.vcproj  S_ObjectNonNormalized.h  S_ObjectNonNormalized.hxx  S_ObjectNormalized.cpp  S_ObjectNormalized.h  S_ObjectNormalized.hxx  S_Object_.vcproj  S_Sphere.cpp  S_Sphere.h  S_Superellipsoid.cpp  S_Superellipsoid.h
Trunk/S_Polyhedron/: CMakeLists.txt  Polyhedron_algorithms.cpp  Polyhedron_algorithms.h  S_Polyhedron.cpp  S_Polyhedron.h  S_Polyhedron.vcproj  S_PolyhedronVertex.h  S_Polyhedron_.vcproj
Trunk/TestZone/: Test1.cpp  TestZone.vcproj  TestZone_.vcproj  includes.h
Trunk/include/: fadbad.h  fadiff.h
Trunk/include/SCD/CD/: GJK.h
Trunk/include/SCD/CD_Penetration/: CD_Depth.h
Trunk/include/SCD/Matrix/: QuaternionM.h  SmallMatrix4x4Default.h  SmallVector4Default.h  configMAL.h
Trunk/include/SCD/STP-BV/: STP_SmallSphere.h  STP_Torus.h
Trunk/include/SCD/S_Object/: S_Box.h  S_Object.h  S_ObjectNonNormalized.hxx
Trunk/include/SCD/S_Polyhedron/: S_Polyhedron.h  S_PolyhedronVertex.h
Trunk/src/CD/: CD_Pair.cpp  CD_SimplexEnhanced.cpp  GJK.cpp
Trunk/src/CD_Penetration/: CD_Depth.cpp
Trunk/src/STP-BV/: STP_BV_P.cpp  STP_Feature.cpp  STP_Torus.cpp
Trunk/src/S_Object/: S_Sphere.cpp  S_Superellipsoid.cpp
Trunk/src/S_Polyhedron/: Polyhedron_algorithms.cpp
Trunk/unitTestings/: includes.h
bindings/python/: CMakeLists.txt
examples/: CMakeLists.txt  example.hxx  example0.cpp  example1.cpp  example2.cpp  example_common.h  example_view.cpp  sample_stpbv2.txt
include/SCD/: CMakeLists.txt  SourcesLib.cmake  scd_api.h
include/SCD/CD/: CD_Pair.h  CD_Scene.h  CD_Simplex.h  CD_Simplex.hxx  CD_SimplexEnhanced.h  CD_SimplexEnhanced.hxx  GJK.h
include/SCD/CD_Penetration/: CD_Depth.h  DT_TriEdge.h
include/SCD/File_Parsing/: SimplestParsing.h
include/SCD/Matrix/: QuaternionM.h  SCD_Types.h  SmallMatrix3x3Default.h  SmallMatrix3x3Mod.h  SmallMatrix3x3T.h  SmallMatrix4x4Default.h  SmallVector3Default.h  SmallVector3Mod.h  SmallVector3T.h  SmallVector4Default.h
include/SCD/STP-BV/: STP_BV.h  STP_BV_P.h  STP_BigSphere.h  STP_Feature.h  STP_SmallSphere.h  STP_Torus.h
include/SCD/S_Object/: S_Box.h  S_Object.h  S_Object.hxx  S_ObjectNonNormalized.h  S_ObjectNormalized.h  S_Sphere.h  S_Superellipsoid.h
include/SCD/S_Polyhedron/: Polyhedron_algorithms.h  S_Polyhedron.h  S_PolyhedronVertex.h  S_PolyhedronVertex.hxx
include/SCD/boost/archive/detail/: oserializer.hpp
src/: CMakeLists.txt
src/CD/: CD_Pair.cpp  CD_Scene.cpp  CD_Simplex.cpp  CD_SimplexEnhanced.cpp  GJK.cpp
src/CD_Penetration/: CD_Depth.cpp  DT_TriEdge.cpp  DT_TriEdge.h
src/File_Parsing/: SimplestParsing.cpp
src/Matrix/: SmallVector4Mod.cpp
src/STP-BV/: STP_BV.cpp  STP_BV_P.cpp  STP_BigSphere.cpp  STP_Feature.cpp  STP_SmallSphere.cpp  STP_Torus.cpp
src/S_Object/: S_Box.cpp  S_Capsule.cpp  S_Cone.cpp  S_Cylinder.cpp  S_Object.cpp  S_ObjectNonNormalized.cpp  S_ObjectNormalized.cpp  S_Point.cpp  S_Sphere.cpp  S_Superellipsoid.cpp
src/S_Polyhedron/: Polyhedron_algorithms.cpp  S_Polyhedron.cpp  S_PolyhedronVertex.cpp
tests/: CMakeLists.txt  clone_example_universe.h  clone_test_universe.h  common.cpp  common.h  example_test.cpp  includes.h  test_animation.cpp  test_general.cpp  test_precision.cpp  test_random.cpp  test_serialize.cpp  test_stp_bv_performance.cpp
tests/shared-tests/examples/: example1.cpp  example2.cpp
unitTestings/: CMakeLists.txt  Test1.cpp  TestZone.vcproj  common.cpp  common.h  includes.h  sample_stpbv1.txt  test_animation.cpp  test_general.cpp  test_no_display.cpp  test_precision.cpp  test_random.cpp
view/: CMakeLists.txt  Polyhedron_algorithms_gl.cpp  Polyhedron_algorithms_gl.h  STPBV_gl.cpp  STPBV_gl.h  S_Box_gl.cpp  S_Box_gl.h  S_Object_Raw_gl.cpp  S_Object_Raw_gl.h  S_Object_gl.cpp  S_Object_gl.h  S_Sphere_gl.cpp  S_Sphere_gl.h  S_Supperellipsoid_gl.cpp  S_Supperellipsoid_gl.h
(+1614 files in other folders)
