set(SOURCES 
  SimplestParsing.cpp
)

set(HEADERS
  SimplestParsing.h
)

add_definitions( 
)

add_library( file_parsing SHARED ${SOURCES} )
SET_TARGET_PROPERTIES( file_parsing
    PROPERTIES
    LIBRARY_OUTPUT_DIRECTORY ../lib
)

INSTALL(FILES ${HEADERS}
    DESTINATION ${CMAKE_INSTALL_PREFIX}/include/${PROJECT_NAME}/File_Parsing
      PERMISSIONS OWNER_READ GROUP_READ WORLD_READ OWNER_WRITE
)

INSTALL(TARGETS file_parsing
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/SCD)
