INCLUDE(../../cmake/python.cmake)

# Look for Python 2.7
SET(Python_ADDITIONAL_VERSIONS 2.7)
FINDPYTHON()

ADD_REQUIRED_DEPENDENCY("eigen3")
ADD_REQUIRED_DEPENDENCY("SpaceVecAlg")

# SCD
SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR}/scd)
CONFIGURE_FILE(__init__.py ${CMAKE_CURRENT_BINARY_DIR}/scd/__init__.py COPYONLY)
SET(OUTPUT_BINDING ${CMAKE_CURRENT_BINARY_DIR}/scd.cpp)

# Generate Python bindings code
ADD_CUSTOM_COMMAND (
  OUTPUT ${OUTPUT_BINDING}
  COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/generate.py ${OUTPUT_BINDING}
  DEPENDS generate.py
)

# Build the library
SET(SOURCES ${OUTPUT_BINDING})

INCLUDE_DIRECTORIES(SYSTEM ${PYTHON_INCLUDE_PATH})
INCLUDE_DIRECTORIES(.)
INCLUDE_DIRECTORIES(${SCD_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${SVA_INCLUDE_DIRS})

ADD_LIBRARY(_scd SHARED ${SOURCES})
PKG_CONFIG_USE_DEPENDENCY(_scd eigen3)
PKG_CONFIG_USE_DEPENDENCY(_scd SpaceVecAlg)
TARGET_LINK_LIBRARIES(_scd scd)
# Requires C++11
SET_TARGET_PROPERTIES(_scd PROPERTIES PREFIX "" COMPILE_FLAGS "-std=c++0x")

# Install rules
INSTALL(TARGETS _scd DESTINATION "${PYTHON_SITELIB}/scd")
PYTHON_INSTALL_BUILD(scd __init__.py "${PYTHON_SITELIB}")
